@@ -50,6 +50,8 @@ class Net::SSLeay::SSL_CTX {
   
   native method set1_curves_list : int ($list : string);
   
+  native method set_session_cache_mode : long ($mode : long);
+  
   native method DESTROY : void ();
   
 }
